# Real-Time-Edge-Detection-Viewer

./: README.md
projectt/: CMakeLists.txt  OPEN_CV_INSTRUCTIONS.txt  README.md  settings.gradle
projectt/app/: build.gradle
projectt/app/src/main/: AndroidManifest.xml
projectt/app/src/main/cpp/: edgedetect.cpp
projectt/app/src/main/java/com/example/edgedetect/: MainActivity.java
projectt/web/: README.md  index.html  package.json  tsconfig.json  viewer.ts
